--- a/styles/header.css
+++ b/styles/header.css
@@ -37,8 +37,16 @@ header {
 .user-profile-container {
     position: relative;
     display: flex;
+    /* align-items: center;
+    justify-content: center; */
+}
+
+.profile-menu-center {
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+
 }
 
 .user-profile {
@@ -78,6 +86,21 @@ header {
 
 .profile-menu.active {
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.profile-menu.active a,
+.profile-menu.active button {
+    width: 70%;
+}
+
+.profile-menu-item-container {
+    width: 100%;
+}
+.profile-menu-item-container:hover {
+    background-color: #2A3D59;
+    cursor: pointer;
 }
 
 .profile-menu a,
@@ -93,16 +116,9 @@ header {
     transition: all 0.2s;
 }
 
-.profile-menu a:hover,
-.profile-menu button:hover {
-    background-color: #1a2332;
-    color: #29abe2;
-    font-weight: 600;
-}
-
 .profile-menu button {
-    padding: 12px 16px;
     color: #cdcdcd;
+    text-align: left;
 }
 
 @media (max-width: 900px) {
