--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -105,18 +105,32 @@ ul img {
 }
 
 @media (max-width: 1250px) {
+    .app {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .main {
+        width: 100%;
+        margin-left: 0;
+    }
+
     .sidebar {
         width: 100%;
         padding: 10px 0;
         position: fixed;
         bottom: 0;
         left: 0;
+        top: auto;
         z-index: 100;
         order: 2;
         flex-direction: row;
         align-items: center;
         justify-content: flex-start;
         gap: 16px;
+        height: 80px;
+        min-height: 80px;
+        max-height: 80px;
     }
 
     .logo_sidebar {
