--- a/styles/header.css
+++ b/styles/header.css
@@ -87,8 +87,8 @@ header {
     top: 100%;
     right: 0;
     background: #2a3647;
-    border-radius: 8px;
-    min-width: 180px;
+    border-radius: 24px 0 24px 24px;
+    min-width: 170px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
     display: none;
     flex-direction: column;
@@ -119,7 +119,7 @@ header {
 
 .profile-menu a,
 .profile-menu button {
-    padding: 12px 16px;
+    padding: 12px 12px;
     color: #cdcdcd;
     text-decoration: none;
     font-size: 16px;
