--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -1283,6 +1283,7 @@ hr {
 
     .ac__subtitle {
         font-size: 16px;
+        margin-bottom: 0px;
     }
 
     .btn {
@@ -1339,7 +1340,7 @@ hr {
     }
 
     .ac__actions {
-        margin-top: 8px;
+        margin-top: 0px;
     }
 
     .ac__hero {
@@ -1355,7 +1356,19 @@ hr {
         height: 40px;
     }
 
-    #ac-contact-dialog, .ac-dialog {
+    #ac-contact-dialog,
+    .ac-dialog {
         width: 305px;
     }
+
+    .ac__avatar img {
+        width: 80px;
+        height: 80px;
+        opacity: 1;
+    }
+
+    .responsiveCloseBtn {
+        display: none;
+    }
+
 }
